--- a/WeatherDataService/pom.xml
+++ b/WeatherDataService/pom.xml
@@ -63,6 +63,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.18.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
